# object_manager

./: .editorconfig  CMakeLists.txt  README.md  rules.cmake
dev/doc/: uml.puml
dev/src/: entity.cpp  entity.h  entity_action.cpp  entity_action.h  entity_action_manager.cpp  entity_action_manager.h  main.cpp  object.cpp  object.h  object_manager.cpp  object_manager.h
